# whiteboard-tpa

./: .gitignore  Api.hs  Board.hs  DESCRIPTION.md  Drawing.hs  Main.hs  README.md  Realtime.hs  TODO.md  db-scheme.sql  whiteboard.cabal
public-dev/: Canvas.elm  Editor.elm  Eraser.elm  Gruntfile.js  History.elm  Minimap.elm  bower.json  index.html  moderating.html  package.json  settings.html
public-dev/bower_components/jquery-simplecolorpicker/: .bower.json
public-dev/bower_components/rangeslider.js/: .bower.json
public-dev/scripts/: Canvas.js  Editor.js  Minimap.js  api.js  app.js  brush-controls.js  color.js  tool-panel-moderating.js  tool-panel.js
public-dev/scripts/controllers/: settings.js  widget.js
public-dev/scripts/services/: server.js  wix.js
public-dev/src/: Api.elm  Canvas.elm  Editor.elm  Eraser.elm  History.elm  Minimap.elm  Moderator.elm  Navigation.elm  RealtimeApi.elm  Utils.elm  elm_dependencies.json
public-dev/styles/: brush-controls.css  font-styles.css  icons-reference.html  moderating.css  settings.css  widget.css
public-dev/styles/fonts/: happy-board-font.eot  whiteboard-font.eot
public-dev/views/: index.html  settings.html
server/: Api.hs  Board.hs  DbConnect.hs  Drawing.hs  DrawingProgress.hs  Main.hs  PdfGenerator.hs  Realtime.hs  ServerError.hs  User.hs  WixInstance.hs  whiteboard.cabal
wireframes/: Happy Board.ai  boards-settings
